<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>twist_mux_dynamic</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tkddnr1022@dankook.ac.kr">uk</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>